--- a/work.html
+++ b/work.html
@@ -282,11 +282,11 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/ppb.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="link">
+                      <a href="https://sites.google.com/smkn1padaherang.sch.id/portofoliodigital?usp=sharing">
                         selengkapnya
                       </a>
                     </h5>
