--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="https://sites.google.com/smkn1padaherang.sch.id/portofoliodigital?usp=sharing">
+                      <a href="https://sites.google.com/smkn1padaherang.sch.id/portofoliodigital/halaman-muka">
                         selengkapnya
                       </a>
                     </h5>
