--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     </div>
       <div class="detail-box">
        
-        <a href="">
+        <a href="https://xitjktc.github.io/galeri_tjktc/">
           Galeri TJKT C
         </a>
       </div>
