--- a/about.html
+++ b/about.html
@@ -140,7 +140,7 @@
             </span>
           </div>
           <div class="social_box">
-            <a href="">
+            <a href="www.youtube.com/@XITJKTC">
               <img src="images/youtube.png" alt="">
             </a>
             <a href="https://www.instagram.com/xi_tjktc.nesapa?igsh=MTZ3NHYzdjZteW1mZg==">
