--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
             </span>
           </div>
           <div class="social_box">
-            <a href="">
+            <a href="www.youtube.com/@XITJKTC">
               <img src="images/youtube.png" alt="">
             </a>
             <a href="https://www.instagram.com/xi_tjktc.nesapa?igsh=MTZ3NHYzdjZteW1mZg==">
