--- a/work.html
+++ b/work.html
@@ -669,7 +669,7 @@
             </span>
           </div>
           <div class="social_box">
-            <a href="tjktcxi@gmail.com">
+            <a href="www.youtube.com/@XITJKTC">
               <img src="images/youtube.png" alt="">
             </a>
             <a href="https://www.instagram.com/xi_tjktc.nesapa?igsh=MTZ3NHYzdjZteW1mZg==">
