--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
               <img src="images/instagram.png" alt="">
             </a>
             <a href="https://www.tiktok.com/@xitjkt.nesapa?_t=8mUevSlxDvk&_r=1">
-              <img src="images/tt.png" alt="">
+              <img src="images/ttt.png" alt="">
             </a>
           </div>
         </div>
