--- a/category.html
+++ b/category.html
@@ -177,7 +177,7 @@
             </span>
           </div>
           <div class="social_box">
-            <a href="www.youtube.com/@XITJKTC">
+            <a href="https://xitjktc.github.io/portofolio_TJKTC/about.html">
               <img src="images/youtube.png" alt="">
             </a>
             <a href="https://www.instagram.com/xi_tjktc.nesapa?igsh=MTZ3NHYzdjZteW1mZg==">
