--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="link">
+                      <a href="https://sites.google.com/view/hayatul-hasanah/halaman-muka">
                         selengkapnya
                       </a>
                     </h5>
