--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/ppb.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
