--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
-<body class="sub_page">
+<body>
   <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
@@ -43,27 +43,23 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Beranda <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About</a>
+                <a class="nav-link" href="about.html"> Tentang</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="work.html">work </a>
+                <a class="nav-link" href="work.html">Siswa </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="category.html"> Category </a>
+                <a class="nav-link" href="category.html"> Yang Di Pelajari </a>
               </li>
             </ul>
             <div class="user_option">
               <a href="">
-                <span>
-                  Login
-                </span>
+             
               </a>
-              <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
+             
             </div>
           </div>
           <div>
