--- a/about.html
+++ b/about.html
@@ -24,8 +24,19 @@
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
-<body>
-  
+<body class="sub_page">
+  <div class="hero_area">
+    <!-- header section strats -->
+    <!-- header section strats -->
+    <header class="header_section">
+      <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg custom_nav-container">
+          <a class="navbar-brand" href="index.html">
+            <img src="images/logoc.png" alt="" />
+            <span>
+              XI TJKT C
+            </span>
+          </a>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
