--- a/work.html
+++ b/work.html
@@ -135,11 +135,11 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/" alt="">
+                    <img src="images/3.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="https://www.portfoliobox.net/pb4/admin?preview=1#/portofoliodavinugraha">
+                      <a href="https://sites.google.com/view/davizexx/beranda">
                         selengkapnya
                       </a>
                     </h5>
@@ -424,11 +424,11 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/21.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="link">
+                      <a href="https://sites.google.com/view/portofoliomely/halaman-muka">
                         selengkapnya
                       </a>
                     </h5>
