--- a/work.html
+++ b/work.html
@@ -200,11 +200,11 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/7.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="link">
+                      <a href="https://sites.google.com/u/0/d/10StFKSboZzY8QkdlbGXzJ10zePBN_r6s/preview">
                         selengkapnya
                       </a>
                     </h5>
