--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="https://sites.google.com/smkn1padaherang.sch.id/reni-dwi-oktavia/beranda?authuser=1">
+                      <a href="https://sites.google.com/view/renidwioktavia/profil">
                         selengkapnya
                       </a>
                     </h5>
@@ -724,11 +724,11 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/28.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="link">
+                      <a href="https://sites.google.com/view/rvan16/halaman-muka">
                         selengkapnya
                       </a>
                     </h5>
